# NtfsResolution

./: .gitignore  CMakeLists.txt
myConsoleApplication/: myConsoleApplication.cpp  stdafx.h
